feat(ui): add dissent view
